correct setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,11 +8,8 @@ isort-show-traceback = True
 
 exclude = .venv,dist,build
 
-per-file-ignores = brain_games/scripts/brain_games.py: F401
-brain_games/scripts/brain_even.py: F401
-brain_games/scripts/brain_calc.py: F401
-  # init modules can contain the local imports, logic, unused imports
-  __init__.py: F401
+per-file-ignores =
+  __init__.py
 
 [isort]
 multi_line_output = 3
