--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ isort-show-traceback = True
 exclude = .venv,dist,build
 
 per-file-ignores =
-  __init__.py
+  __init__.py: F401
 
 [isort]
 multi_line_output = 3
